# portfolio-council-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: accuracy-check.yml  ci-tests.yml  daily-data.yml  deploy-dashboard.yml  portfolio-review.yml
api/: deps.py  main.py
api/routes/: accuracy.py  analyses.py  portfolios.py  users.py
data/: portfolio.json
data/history/: 2026-04-13.json
docs/: accuracy.html  dev-status.html  history.html  index.html  portfolio-editor.html
scripts/: build_history_index.py  calculate_accuracy.py  prompt_ab_test.py  run_pipeline.py
src/agents/: __init__.py  crypto_agent.py  cycle_agent.py  macro_agent.py  quant_agent.py  sector_agent.py  value_agent.py
src/application/: config.py  portfolio_service.py
src/core/: __init__.py  base_agent.py  consensus.py  debate_engine.py  moderator.py  schemas.py
src/infrastructure/data/: __init__.py  base.py  cached_fetcher.py  crypto_fetcher.py  macro_fetcher.py  market_fetcher.py
src/infrastructure/llm/: __init__.py  base.py  claude_provider.py  multi_provider.py  openai_provider.py
src/infrastructure/notification/: telegram_notifier.py
src/prompts/: crypto.md  cycle.md  macro.md  moderator.md  quant.md  sector.md  value.md
src/utils/: legal.py  logging.py  rate_limiter.py
tests/fixtures/: sample_market_data.json  sample_portfolio.json
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_consensus.py  test_debate_engine.py  test_json_parser.py  test_moderator.py  test_rate_limiter.py  test_schemas.py
(+4 files in other folders)
