[project]
name = "portfolio-council-ai"
version = "0.1.0"
description = "Multi-agent AI investment advisory system with 6 expert agents"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "younggil"}]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "yfinance>=0.2.30",
    "pykrx>=1.0.0",
    "fredapi>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
